added merged labels+weights

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,16 @@
     "import gc\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
+    "from metrics.metrics import Metric\n",
     "\n",
-    "from kardioml.data.p_t_wave_detector import PTWaveDetection"
+    "from kardioml.data.p_t_wave_detector import PTWaveDetection\n",
+    "\n",
+    "metric = Metric()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASETS = ['A','B','C','D','E','F']\n",
-    "#DATASETS = ['A','B','D','E'] #current for training\n",
+    "#DATASETS = ['A','B','C','D','E','F']\n",
+    "DATASETS = ['A','B','D','E'] #current for training\n",
     "#DATASETS = ['D']\n",
     "datalist = []\n",
     "\n",
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +76,7 @@
        "43101"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,17 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 43101/43101 [47:57<00:00, 14.98it/s]      \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for data in tqdm(datalist):\n",
     "    signal = np.load(data+'.npy')\n",
@@ -173,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 43027/43027 [03:14<00:00, 221.46it/s]\n"
+      "100%|██████████| 32683/32683 [02:34<00:00, 211.65it/s]\n"
      ]
     }
    ],
@@ -194,7 +189,17 @@
     "    elif meta['labels_training_merged'] is None:\n",
     "        continue\n",
     "    else:\n",
-    "        labels.append(meta['labels_training_merged'])\n",
+    "        label = meta['labels_training_merged']\n",
+    "        if label[4] > 0 or label[18] >0:\n",
+    "            label[4] = 1\n",
+    "            label[18] = 1\n",
+    "        if label[23] > 0 or label[12] >0:\n",
+    "            label[23] = 1\n",
+    "            label[12] = 1\n",
+    "        if label[26] > 0 or label[13] >0:\n",
+    "            label[26] = 1\n",
+    "            label[13] = 1\n",
+    "        labels.append(label)\n",
     "    \n",
     "\n",
     "    \n",
@@ -203,42 +208,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[17.330229671011793,\n",
-       " 9.83409651285664,\n",
-       " 228.84426229508196,\n",
-       " 109.05859375,\n",
-       " 11.344575375863469,\n",
-       " 23.304674457429048,\n",
-       " 17.170356703567037,\n",
-       " 5.42537893509522,\n",
-       " 34.768368617683684,\n",
-       " 153.4010989010989,\n",
-       " 35.206809583858764,\n",
-       " 93.37458193979933,\n",
-       " 22.940838126540672,\n",
-       " 157.73446327683618,\n",
-       " 82.11470588235294,\n",
-       " 228.84426229508196,\n",
-       " 50.854280510018214,\n",
-       " 81.15988372093022,\n",
-       " 1.0,\n",
-       " 35.70204603580562,\n",
-       " 41.11782032400589,\n",
-       " 1.4694983946523503,\n",
-       " 24.994628469113696,\n",
-       " 1.0,\n",
-       " 11.795099281791297,\n",
-       " 93.37458193979933,\n",
-       " 1.0]"
+       "array([1. , 1. , 1. , 1. , 0.5, 1. , 1. , 1. , 1. , 1. , 1. , 1. , 0.5,\n",
+       "       0.5, 1. , 1. , 1. , 1. , 0.5, 1. , 1. , 1. , 1. , 0.5, 1. , 1. ,\n",
+       "       0.5])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights = np.array([1.]*27)\n",
+    "weights[[4,18,23,12,13,26]] = 0.5\n",
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.05770264, 0.10168702, 0.00436978, 0.00916938, 0.08814786,\n",
+       "       0.04290985, 0.05823991, 0.18431892, 0.02876178, 0.00651886,\n",
+       "       0.0284036 , 0.01070955, 0.04359039, 0.00633977, 0.01217809,\n",
+       "       0.00436978, 0.01966403, 0.01232136, 0.08814786, 0.0280096 ,\n",
+       "       0.02432036, 0.68050432, 0.0400086 , 0.04359039, 0.08478097,\n",
+       "       0.01070955, 0.00633977])"
+      ]
+     },
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,9 +254,9 @@
    "source": [
     "weights = np.sum(labels,axis=0)\n",
     "weights = weights/labels.shape[0]\n",
-    "weights[np.where(weights == 0.)] = 1\n",
-    "weights = 1/weights\n",
-    "weights = weights.tolist()\n",
+    "# weights[np.where(weights == 0.)] = 1\n",
+    "# weights = 1/weights\n",
+    "# weights = weights.tolist()\n",
     "weights"
    ]
   },
@@ -261,88 +269,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 27%|██▋       | 3/11 [00:00<00:00, 15.29it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "===================\n",
-      "./data/F/formatted/E06964\n",
-      "['ventricular premature beats', 'prolonged qt interval']\n",
-      "===================\n",
-      "===================\n",
-      "./data/F/formatted/E00805\n",
-      "['sinus rhythm']\n",
-      "===================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 82%|████████▏ | 9/11 [00:00<00:00, 19.47it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "===================\n",
-      "./data/F/formatted/E09754\n",
-      "['left axis deviation']\n",
-      "===================\n",
-      "===================\n",
-      "./data/F/formatted/E09218\n",
-      "['left axis deviation']\n",
-      "===================\n",
-      "===================\n",
-      "./data/F/formatted/E07023\n",
-      "['1st degree av block', 'sinus bradycardia']\n",
-      "===================\n",
-      "===================\n",
-      "./data/F/formatted/E08959\n",
-      "['premature atrial contraction', 'premature atrial contraction']\n",
-      "===================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 11/11 [00:00<00:00, 20.48it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "===================\n",
-      "./data/F/formatted/E07619\n",
-      "['t wave abnormal', 'bradycardia']\n",
-      "===================\n",
-      "===================\n",
-      "./data/F/formatted/E05312\n",
-      "['prolonged qt interval', 'atrial fibrillation', 't wave abnormal']\n",
-      "===================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_range = np.arange(len(datalist))[0:11].tolist()\n",
     "\n",
@@ -384,51 +313,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.,  1.,  1.,  1., -1.]])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#pred = np.array([1,1,0.2,0.3,0]).reshape(1,-1)\n",
-    "pred =  np.array([1,1,0,1,1]).reshape(1,-1)\n",
-    "label = np.array([1,1,0,1,0]).reshape(1,-1)\n",
+    "pred =  np.array([1,1,1,1,1]).reshape(1,-1)\n",
+    "label = np.array([[0,0,0,1,1]]).reshape(1,-1)\n",
     "\n",
-    "pred = (pred - 0.5)*2\n",
-    "label = (label - 0.5)*2\n",
+    "# pred1 =  np.array([0,0,1,0,1]).reshape(1,-1)\n",
+    "# label1 = np.array([0,0,0,0,1]).reshape(1,-1)\n",
     "\n",
-    "metric = pred*label\n",
-    "# metric = abs(metric)\n",
-    "metric"
+    "# label = np.append(label,label1,axis=0)\n",
+    "# pred = np.append(pred,pred1,axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "55.0"
+       "array([[0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0.5, 0.5],\n",
+       "       [0. , 0. , 0. , 0.5, 0.5]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(metric)"
+    "cm = metric.compute_modified_confusion_matrix(label,label)\n",
+    "\n",
+    "cm#*metric.weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.  , 0.  , 0.  , 0.  ],\n",
+       "       [0.  , 0.  , 0.  , 0.  , 0.  ],\n",
+       "       [0.  , 0.  , 0.  , 0.  , 0.  ],\n",
+       "       [0.81, 0.81, 1.  , 0.  , 0.  ],\n",
+       "       [0.81, 0.81, 1.  , 0.  , 0.  ]])"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred1 =  pred\n",
+    "label1 = label#/np.sum(label,axis=0)\n",
+    "\n",
+    "pred11 = label1-pred1\n",
+    "pred11 = np.clip(pred11,0,100)\n",
+    "\n",
+    "pred12 = pred1-label1\n",
+    "pred12 = np.clip(pred12,0,100)\n",
+    "\n",
+    "(np.matmul(label1.T,pred11)+np.matmul(label1.T,pred1)) * np.matmul(label1.T,pred12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0.9, 0.9, 1. , 0. , 0. ],\n",
+       "       [0.9, 0.9, 1. , 0. , 0. ]])"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.matmul(label1.T,pred12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0.9, 0.9, 1. , 1. , 1. ],\n",
+       "       [0.9, 0.9, 1. , 1. , 1. ]])"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.matmul(label1.T,pred1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Must pass 2-d input. shape=(2, 1, 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-125-a65423b36cb4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpred1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    520\u001b[0m                     \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    521\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 522\u001b[0;31m                     \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_ndarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    523\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    524\u001b[0m                 \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36minit_ndarray\u001b[0;34m(values, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    188\u001b[0m     \u001b[0;31m# by definition an array here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m     \u001b[0;31m# the dtypes will be coerced to a single dtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 190\u001b[0;31m     \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_prep_ndarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    191\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36m_prep_ndarray\u001b[0;34m(values, copy)\u001b[0m\n\u001b[1;32m    322\u001b[0m         \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    323\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 324\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Must pass 2-d input. shape={values.shape}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    325\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    326\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Must pass 2-d input. shape=(2, 1, 5)"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([pred1.shape,label1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 2, 1, 2])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(label,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 1, 1, 1],\n",
+       "       [0, 0, 1, 0, 1]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 1, 1, 1],\n",
+       "       [0, 0, 1, 0, 1]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred"
    ]
   },
   {
