added optional downsamplign to 500hz

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,10 +32,12 @@
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "from metrics.metrics import Metric\n",
+    "from kardioml.data.resample import Resampling\n",
     "\n",
     "from kardioml.data.p_t_wave_detector import PTWaveDetection\n",
     "\n",
-    "metric = Metric()"
+    "metric = Metric()\n",
+    "resampling = Resampling()"
    ]
   },
   {
@@ -308,271 +310,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Custom metric"
+    "# Checking downsampling algo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pred = np.array([1,1,0.2,0.3,0]).reshape(1,-1)\n",
-    "pred =  np.array([1,1,1,1,1]).reshape(1,-1)\n",
-    "label = np.array([[0,0,0,1,1]]).reshape(1,-1)\n",
-    "\n",
-    "# pred1 =  np.array([0,0,1,0,1]).reshape(1,-1)\n",
-    "# label1 = np.array([0,0,0,0,1]).reshape(1,-1)\n",
-    "\n",
-    "# label = np.append(label,label1,axis=0)\n",
-    "# pred = np.append(pred,pred1,axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 36%|███▋      | 4/11 [00:00<00:00, 16.97it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0\n"
+      "===================\n",
+      "./data/A/formatted/A3306\n",
+      "['right bundle branch block']\n",
+      "===================\n",
+      "===================\n",
+      "./data/A/formatted/A6853\n",
+      "['sinus rhythm']\n",
+      "===================\n",
+      "===================\n",
+      "./data/A/formatted/A3233\n",
+      "['1st degree av block']\n",
+      "===================\n",
+      "===================\n",
+      "./data/A/formatted/A3855\n",
+      "['atrial fibrillation']\n",
+      "===================\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "array([[0. , 0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0.5, 0.5],\n",
-       "       [0. , 0. , 0. , 0.5, 0.5]])"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cm = metric.compute_modified_confusion_matrix(label,label)\n",
-    "\n",
-    "cm#*metric.weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 82%|████████▏ | 9/11 [00:00<00:00, 12.37it/s]"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "2.0"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sum(cm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A5826\n",
+      "['1st degree av block']\n",
+      "===================\n",
+      "===================\n",
+      "./data/A/formatted/A6747\n",
+      "['right bundle branch block']\n",
+      "===================\n",
+      "===================\n",
+      "./data/A/formatted/A0178\n",
+      "['right bundle branch block']\n",
+      "===================\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "array([[0.  , 0.  , 0.  , 0.  , 0.  ],\n",
-       "       [0.  , 0.  , 0.  , 0.  , 0.  ],\n",
-       "       [0.  , 0.  , 0.  , 0.  , 0.  ],\n",
-       "       [0.81, 0.81, 1.  , 0.  , 0.  ],\n",
-       "       [0.81, 0.81, 1.  , 0.  , 0.  ]])"
-      ]
-     },
-     "execution_count": 170,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred1 =  pred\n",
-    "label1 = label#/np.sum(label,axis=0)\n",
-    "\n",
-    "pred11 = label1-pred1\n",
-    "pred11 = np.clip(pred11,0,100)\n",
-    "\n",
-    "pred12 = pred1-label1\n",
-    "pred12 = np.clip(pred12,0,100)\n",
-    "\n",
-    "(np.matmul(label1.T,pred11)+np.matmul(label1.T,pred1)) * np.matmul(label1.T,pred12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 11/11 [00:00<00:00, 12.10it/s]"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "array([[0. , 0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. , 0. ],\n",
-       "       [0.9, 0.9, 1. , 0. , 0. ],\n",
-       "       [0.9, 0.9, 1. , 0. , 0. ]])"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.matmul(label1.T,pred12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A5676\n",
+      "['atrial fibrillation']\n",
+      "===================\n",
+      "===================\n",
+      "./data/A/formatted/A3929\n",
+      "['1st degree av block']\n",
+      "===================\n"
+     ]
+    },
     {
-     "data": {
-      "text/plain": [
-       "array([[0. , 0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. , 0. ],\n",
-       "       [0.9, 0.9, 1. , 1. , 1. ],\n",
-       "       [0.9, 0.9, 1. , 1. , 1. ]])"
-      ]
-     },
-     "execution_count": 172,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.matmul(label1.T,pred1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 1, 0, 0, 0]])"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred11"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Must pass 2-d input. shape=(2, 1, 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-125-a65423b36cb4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpred1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    520\u001b[0m                     \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    521\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 522\u001b[0;31m                     \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_ndarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    523\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    524\u001b[0m                 \u001b[0mmgr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36minit_ndarray\u001b[0;34m(values, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    188\u001b[0m     \u001b[0;31m# by definition an array here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m     \u001b[0;31m# the dtypes will be coerced to a single dtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 190\u001b[0;31m     \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_prep_ndarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    191\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/pandas/core/internals/construction.py\u001b[0m in \u001b[0;36m_prep_ndarray\u001b[0;34m(values, copy)\u001b[0m\n\u001b[1;32m    322\u001b[0m         \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    323\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 324\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Must pass 2-d input. shape={values.shape}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    325\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    326\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Must pass 2-d input. shape=(2, 1, 5)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "df = pd.DataFrame([pred1.shape,label1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 2, 1, 2])"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sum(label,axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 1, 1, 1],\n",
-       "       [0, 0, 1, 0, 1]])"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 1, 1, 1],\n",
-       "       [0, 0, 1, 0, 1]])"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred"
+    "data_range = np.arange(len(datalist))[0:11].tolist()\n",
+    "\n",
+    "datalist_sub = [i for index,i in enumerate(datalist) if index in data_range]\n",
+    "\n",
+    "\n",
+    "for data in tqdm(datalist_sub):\n",
+    "    meta = json.load(open(data+'.json'))\n",
+    "    if meta['shape'][0] > 38000:\n",
+    "        continue\n",
+    "    elif meta['labels_training_merged'] is None:\n",
+    "        continue\n",
+    "    else:\n",
+    "        signal = np.load(data+'.npy')\n",
+    "        \n",
+    "        \n",
+    "        fig = plt.figure(figsize=(20,10))\n",
+    "        for i in range(12):\n",
+    "            channel = signal[:,i]\n",
+    "            plt.plot(channel+i*500)\n",
+    "            channel = resampling.downsample(channel,order=2)\n",
+    "            plt.plot(channel+i*500)\n",
+    "        plt.show()\n",
+    "        plt.title(str(meta['labels_full'])+' | '+data)\n",
+    "        print('===================')\n",
+    "        print(data)\n",
+    "        print(meta['labels_full'])\n",
+    "        print('===================')\n",
+    "        if data == '../data/A/formatted/A2091':\n",
+    "            break"
    ]
   },
   {
