- deepecg debug - cross-validation splitting code

--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -69,7 +78,7 @@
     "data = FormatDataPhysionet2020(dataset='A')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   },
   {
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -101,7 +110,7 @@
     "data = FormatDataPhysionet2020(dataset='B')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   },
   {
@@ -111,66 +120,6 @@
     "### Dataset C\n",
     "- C. 74 recordings from the St Petersburg INCART 12-lead Arrhythmia Database\n",
     "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_StPetersburg.tar.gz "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Initialize data formater\n",
-    "data = FormatDataPhysionet2020(dataset='C')\n",
-    "\n",
-    "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dataset D\n",
-    "- D. 516 recordings from the PTB Diagnostic ECG Database\n",
-    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_PTB.tar.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Initialize data formater\n",
-    "data = FormatDataPhysionet2020(dataset='D')\n",
-    "\n",
-    "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dataset E\n",
-    "- E. 21,837 recordings from the PTB-XL electrocardiography Database\n",
-    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_PTB-XL.tar.gz"
    ]
   },
   {
@@ -188,10 +137,70 @@
    ],
    "source": [
     "# Initialize data formater\n",
+    "data = FormatDataPhysionet2020(dataset='C')\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset D\n",
+    "- D. 516 recordings from the PTB Diagnostic ECG Database\n",
+    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_Training_PTB.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize data formater\n",
+    "data = FormatDataPhysionet2020(dataset='D')\n",
+    "\n",
+    "# Run format process\n",
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset E\n",
+    "- E. 21,837 recordings from the PTB-XL electrocardiography Database\n",
+    "- https://storage.cloud.google.com/physionet-challenge-2020-12-lead-ecg-public/PhysioNetChallenge2020_PTB-XL.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='E')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   },
   {
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -223,7 +232,7 @@
     "data = FormatDataPhysionet2020(dataset='F')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   }
  ],
