--- a/kardioml/models/deepecg/notebooks/0_resampling.ipynb
+++ b/kardioml/models/deepecg/notebooks/0_resampling.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,9 +74,9 @@
     "    t_wave_array = create_peak_array(waveform=waveform, peaks=meta_data['t_waves'], fs_old=meta_data['fs_resampled'], fs_new=fs)\n",
     "\n",
     "    # Add R, P, and T waves\n",
-    "    features = np.concatenate([rpeak_array.reshape([-1, 1])], axis=1)\n",
-    "#                                p_wave_array.reshape([-1, 1]), \n",
-    "#                                t_wave_array.reshape([-1, 1])], axis=1)\n",
+    "    features = np.concatenate([rpeak_array.reshape([-1, 1]),\n",
+    "                               p_wave_array.reshape([-1, 1]), \n",
+    "                               t_wave_array.reshape([-1, 1])], axis=1)\n",
     "    waveform = np.append(waveform, features, axis=1)\n",
     "    \n",
     "    # Save meta data\n",
@@ -122,15 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set sample frequencies\n",
-    "sample_frequencies = [350]\n",
+    "sample_frequencies = [500, 550, 600]\n",
     "\n",
     "# Set datasets\n",
-    "datasets = ['A', 'B', 'D', 'E', 'F']\n",
+    "datasets = ['A', 'B', 'C', 'D', 'E', 'F']\n",
     "\n",
     "# Loop through sample frequencies\n",
     "for fs in sample_frequencies:\n",
@@ -149,13 +140,6 @@
     "        _ = Parallel(n_jobs=-1)(delayed(process_signal)(os.path.join(DATA_PATH, dataset), filename, fs) \n",
     "                                for filename in filenames)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
